--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
    <h2>About</h2>
    
    <p>I am Saina Elsa Varughese, I am from Kallooppara, <br>Currently i am studying MCA @ MACFAST College, Thiruvalla.<br></p>
-   <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Illo saepe laborum accusamus ipsum perferendis qui quis? Dolorem, <br> reiciendis, vero explicabo vitae earum quibus                             dam, error minima quis eveniet tempora accusantium facere.</p></div>
+   <p>iam a learner <br>  <br>                            </p></div>
    </div>
    
 </body>
