--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
    <h2>About</h2>
    
    <p>I am Saina Elsa Varughese, I am from Kallooppara, <br>Currently i am studying MCA @ MACFAST College, Thiruvalla.<br></p>
-   <p>iam a learner <br>  <br>                            </p></div>
+   <p>Iam a learner <br>Always have a Thirst in my Mind which strikes my heart and eyes  <br>                            </p></div>
    </div>
    
 </body>
